Spacing fixes

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 .card-body>img {
   float: right;
   margin-left: .5rem;
+  margin-bottom: .5rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
